# RNAStructViz

./: .gitignore  CREDITS.md  DiagramWindow.cpp  DiagramWindow.h  DrawingWindow.cpp  DrawingWindow.h  GLWindow.cpp  GLWindow.h  MAKE-DEBIAN-PACKAGE.md  Main.cpp  MainWindow.cpp  MainWindow.h  Makefile  Makefile.in  README  README.md  RNAStructViz Analysis.docx  RNAStructViz.cpp  RNAStructViz.h  RNAStructure.cpp  RNAStructure.h  StructureManager.cpp  StructureManager.h  configure  configure.ac  configure.scan  index.html  params.json  rnastructviz_config.h  rnastructviz_config.h.in  stamp-h1
StatsWindow/: Original_Truth_Value_Code.txt  StatsWindow.cpp  StatsWindow.h  StatsWindow.h~
Testing/: MockUnitTestGuidelines.md
autom4te.cache/: output.1  requests  traces.0  traces.1
build-scripts/: BuildConfig.cfg  BuildTargetInfo.h.in  build-platform-header.sh  generate-build-config-cflags.sh  get-build-config-setting.sh  pkg-config-flags.sh
example-outputs/: RNAStructViz-ArcDiagram-2020-01-22-125534.c  RNAStructViz-RadialLayout-2020-01-22-125918.c
old-automake/: Makefile  Makefile.am  Makefile.in  config.status  configure
sample .ct files/: cuniculi-103-183-13.ct  cuniculi-1092-1173-12.ct  ecoli_23s.ct  gtfold-cuniculi-cd450.ct
sample-outputs/: StatsTableOutput-2019-11-13-083621.csv
sample-structures/: 16S_C.elegans_RNAfold.ct  16S_C.elegans_UNAfold.ct  (+9 more)
src/: .DiagramWindow.cpp.swp  .DiagramWindow.h.swp  .Makefile.swp  .RNAStructure.h.swp  AutoloadIndicatorButton.cpp  AutoloadIndicatorButton.h  BaseSequenceIDs.cpp  BaseSequenceIDs.h  BranchTypeIdentification.cpp  BranchTypeIdentification.h  BuildTargetInfo.h  CairoDrawingUtils.cpp  CairoDrawingUtils.h  CommonDialogs.cpp  CommonDialogs.h  ConfigExterns.h  ConfigOptions.h  ConfigParser.cpp  ConfigParser.h  Debugging.h  DiagramWindow.cpp  DiagramWindow.h  DisplayConfigWindow.cpp  DisplayConfigWindow.h  Fl_File_Chooser.H  Fl_File_Chooser.cpp  Fl_Rotated_Text.H  Fl_Rotated_Text.cpp  FolderStructure.h  FolderWindow.cpp  FolderWindow.h  GLWindow.cpp  GLWindow.h  ImageNavButton.h  InputWindow.cpp  InputWindow.h  InputWindowExportImage.cpp  InputWindowExportImage.h  LoadFileSelectAllButton.cpp  LoadFileSelectAllButton.h  (+45 more)
src/.deps/: BranchTypeIdentification.Po  DiagramWindow.Po  Fl_Rotated_Text.Po  FolderWindow.Po  GLWindow.Po  InputWindow.Po  Main.Po  MainWindow.Po  RNAStructViz.Po  RNAStructure.Po  StatsWindow.Po  StructureManager.Po  rocbox.Po
src/docs/: SourceFileDescriptions.md
src/old-automake/: Makefile  Makefile.in
src/old-code/: ImageLabel.h
src/pixmaps/: BaseColorPaletteButtonImage.c  ConfigCheckBoxParams.c  ConfigDiagramWindow.c  ConfigDiagramWindow.xcf  ConfigPathsIcon-SolidBlack.c  ConfigPathsIcon-Tropical.c  ConfigPathsIcon.c  ConfigThemesIcon-Tropical.c  ConfigThemesIcon.c  ConfigWindowIcon.xbm  DiagramWindowIcon.xbm  FLTKSymbolFolder.c  FLTKSymbolFolder.xcf  FivePrimeThreePrimeStrandEdgesMarker-v2.xcf  FivePrimeThreePrimeStrandEdgesMarker.c  FivePrimeThreePrimeStrandEdgesMarker.c-temp  FivePrimeThreePrimeStrandEdgesMarker.xcf  HelpIcon.c  InfoButton.c  LinkSetIcon.c  LinkUnsetIcon.c  MainWindowIcon.c  PNGNewPathIcon.c  PNGNewPathIcon.xcf  PinStructureIcon.c  PixelDataStruct.h  RNAStructViz.data  RNAStructViz.ppm  RNAStructViz.rgb  RNAStructVizLogo-SolidBlack.c  RNAStructVizLogo-Tropical.c  RNAStructVizLogo.c  RNAStructVizLogo.xcf  RNAWindowIcon.xbm  ShortcutsIcon.c  SmallInfoButtonIcon.c  StatsFormula.c  StatsFormulas.tex  StatsOverviewLegend.c  StatsWindowIcon.xbm  (+12 more)
src/tools/: RGB2UCharArray.cpp
src/working-code/: CustomFLTKSymbols.cpp  CustomFLTKSymbols.h
(+102 files in other folders)
