AM_CPPFLAGS = -g -Wall @CXXFLAGS_FLTK@

AM_LDFLAGS =  -g -Wall @LDFLAGS_FLTK@

LIBS = @LDFLAGS_FLTK@

bin_PROGRAMS = RNAStructViz

RNAStructViz_SOURCES = \
      DiagramWindow.cpp \
      StatsWindow.cpp \
      GLWindow.cpp \
      InputWindow.cpp \
      FolderWindow.cpp \
      Main.cpp \
      MainWindow.cpp \
      RNAStructure.cpp \
      RNAStructViz.cpp \
      StructureManager.cpp \
      Fl_Rotated_Text.cpp \
      rocbox.cpp
