AM_CPPFLAGS = -g -Wall @CXXFLAGS_EXTRA@

AM_LDFLAGS =  -g -Wall @LDFLAGS_EXTRA@

LIBS = @LDFLAGS_EXTRA@

bin_PROGRAMS = RNAStructViz

RNAStructViz_SOURCES = \
      BranchTypeIdentification.cpp \
      DiagramWindow.cpp \
      StatsWindow.cpp \
      GLWindow.cpp \
      InputWindow.cpp \
      FolderWindow.cpp \
      Main.cpp \
      MainWindow.cpp \
      RNAStructure.cpp \
      RNAStructViz.cpp \
      StructureManager.cpp \
      Fl_Rotated_Text.cpp \
      rocbox.cpp
